--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Desenvolvimento Front-end</h2>
+            <h2 class="experience-sub-title">Front-end</h2>
             <div class="article-container">
               <article>
                 <img
@@ -165,10 +165,11 @@
                 </div>
               </article>
             
+
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Desenvolvimento Back-end</h2>
+            <h2 class="experience-sub-title">Back-end</h2>
             <div class="article-container">
               <article>
                 <img
@@ -266,14 +267,7 @@
           />
           <p><a href="mailto:luan.rodriguesm11@gmail.com">luan.rodriguesm11@gmail.com</a></p>
         </div>
-        <div class="contact-info-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="LinkedIn icon"
-            class="icon contact-icon"
-          />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
-        </div>
+       
       </div>
     </section>
     <footer>
