--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Olá, eu sou</p>
         <h1 class="title">Luan Martins</h1>
-        <p class="section__text__p2">Um Engenheiro de software iniciante</p>
+        <p class="section__text__p2">Um Estudante de Engenharia de Software</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -112,7 +112,7 @@
                 como engenharia de requisitos e testes automatizados. Continuo buscando aprender cada vez mais e expandir minhas habilidades na área.
 
     
-            </p>
+            </p><a href="index1.html" id="extra">Saiba mais...</a>
           </div>
         </div>
       </div>
